# python_project_template

./: .flake8  .gitignore  .pre-commit-config.yaml  .yamllint  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  default_issue_template.md
.github/workflows/: ci.yml  release.yml
scripts/: clean.py  initialize_project.py  setup.py
src/: __init__.py
tests/: conftest.py  test_version.py
